--- a/localization/russian/TFE_credits_l_russian.yml
+++ b/localization/russian/TFE_credits_l_russian.yml
@@ -1,5 +1,5 @@
 ﻿l_russian:
- HEADER_TFE_BREAD_AND_CIRCUSES:0 "#credits_title THE FALLEN EAGLE: HEIRS OF ROME#!" #NT!
+ HEADER_TFE_BREAD_AND_CIRCUSES:0 "#credits_title THE FALLEN EAGLE#!"
  HEADER_TFE_CREATORS:0 "#credits_header Creators#!" #NT!
  HEADER_TFE_LEAD_DEVS:0 "#credits_header Lead Developers#!" #NT!
  HEADER_TFE_DEVS:0 "#credits_header Programmers#!" #NT!
