--- a/localization/russian/TFE_regiment_l_russian.yml
+++ b/localization/russian/TFE_regiment_l_russian.yml
@@ -71,4 +71,7 @@
 
  # Zande Warrios #NT!
  african_pikemen:0 "Long-Shield Bearers" #NT!
- african_pikemen_flavor:0 "#F These African 'hoplites' prided themselves on their martial prowess and were often hired by others to fight in their wars#." #NT!
+ african_pikemen_flavor:0 "#F These African 'hoplites' prided themselves on their martial prowess and were often hired by others to fight in their wars#."
+
+ illyrian_pirates:0 "Illyrian Pirates"
+ illyrian_pirates_flavor:0 ""
