--- a/localization/russian/dynasties/TFE_dynn_l_russian.yml
+++ b/localization/russian/dynasties/TFE_dynn_l_russian.yml
@@ -2753,7 +2753,8 @@ dynn_Hyrcanus:0 "Hyrcanus" #NT!
  dynn_zegrenses:0 "Zegrenses" #NT!
  dynn_nesimi:0 "Nesimi" #NT!
  dynn_autoleles:0 "Autoleles" #NT!
-
+ dynn_banuaws:0 "Banu Aws"
+ dynn_banukhazraj:0 "Banu Khazraj"
  ### Extra Roman Dynasty Names ### #NT!
  dynn_Acisculus:0 "Acisculus" #NT!
  dynn_Aeneas:0 "Aeneas" #NT!
