--- a/localization/russian/event_localization/collapse_events_l_russian.yml
+++ b/localization/russian/event_localization/collapse_events_l_russian.yml
@@ -51,6 +51,77 @@
  western_roman.0026.desc:0 "Империя объединилась! Пора забыть темные времена, через которые мы прошли. Однако, когда мы пытаемся двигаться дальше, старые регалии напоминают нам о прошлом. Я встретился со своими советниками и мы решили расплавить старые регалии, чтобы выковать новые, символизирующие возвращение единства между империями."
  western_roman.0026.a:0 "Мы движемся к новому веку!"
 
+ western_roman.0027.t:0 "The Fate of the Western Roman Empire"
+ western_roman.0027.desc:0 "After deposing my predecessor, Glycerius, with the support of Emperor Zeno, I set about restoring the West to its former glory. Unfortunately, a little more than a year into my reign, my commander, Orestes, betrayed me and set up his son on the throne. In the ensuing instability, the leader of the foederati barbarians, Odoacer, managed to usurp control of Italia. Now, I face a choice: \n\nDo I attempt to once again retake the Roman heartland, or do I retire to the safety of Illyria and content myself with nominal control over the West?"
+ western_roman.0027.a:0 "I will regain what I have lost!"
+ western_roman.0027.b:0 "I have no chance -- better to appease my vassals."
+ 
+ western_roman.0028.t:0 "The Reclamation of Italia"
+ western_roman.0028.desc:0 "I have gathered some gold and swallowed my pride to ask the Byzantine Emperor for more concrete help in retaking Rome. Surely the imperial court, having already supported me once, will be amenable to assisting me again?"
+ western_roman.0028.a:0 "Rally the mercenaries!"
+
+ western_roman.0029.t:0 "Nepos Asks for Aid"
+ western_roman.0029.desc:0 "The deposed Western Emperor Nepos fled to Illyria after being betraed by his foederati. Ever since, he has plotted to regain control of Italia. As one of the few remaining claimants to the Western throne considered to be legitimate, my position as Eastern Emperor relative to him is one that requires a delicate touch. Recently, Nepos has sent a missive to me requesting the East's aid in once again reclaiming Italy, but our resources are stretched thin as it is. How much am I willing to commit to his endeavor?"
+ western_roman.0029.a:0 "Send a grand host!"
+ western_roman.0029.b:0 "Send a respectable detachment."
+ western_roman.0029.c:0 "Send a token force."
+ western_roman.0029.d:0 "I send my prayers, but nothing else."
+ western_roman.0029.e:0 "This bungler has wasted enough of my time."
+ nepos_reward_tooltip:0 "Nepos may reciprocate my aid if he wins his war."
+ nepos_reward_tooltip_unlikely:0 "Nepos is unlikely to reward me for my empty words."
+
+ western_roman.0030.t:0 "Nepos Victorious"
+ western_roman.0030.desc:0 "Italia has been retaken, with the cities of Roma, Mediolanum, and Ravenna now free from foreign occupation and the familiar Roman banner proudly snapping with the wind over the buildings of the Palatine Hill. \n\nWith this victory comes a reevaluation of my relationship with the Eastern Roman Emperor. How closely should I wed my realm to Constantinople?"
+ western_roman.0030.a:0 "An alliance would be mutually beneficial."
+ western_roman.0030.b:0 "Becoming a tributary is the only viable option."
+ western_roman.0030.c:0 "It's time to chart my own path."
+
+ western_roman.0031.t:0 "Rebuilding the Temple of Jerusalem"
+ western_roman.0031.desc:0 "The rebuilding of a temple for the Jews on the Temple Mount would not only bolster their status as a counterweight to the rising influence of Christianity, but also give the lie to Jesus' prophecy that the temple would never again be rebuilt. While a reconstruction of such a grand structure will take much time and effort, this would greatly help my efforts in reconverting the empire back to the old ways. To lead such a grand and controversial reconstruction requires someone skilled at both building and protecting the project during its lifetime. Who should I choose as the project leader?"
+ western_roman.0031.a:0 "Alypius of Antioch was a competent vicar in Britain."
+ western_roman.0031.b:0 "The local ruler is best suited for this task."
+ western_roman.0031.c:0 "My steward can handle this."
+ stewardship_temple:0 "High stewardship will reduce building costs; intrigue will help identify threats to the project."
+
+ western_roman.0032.t:0 "Fire!"
+ western_roman.0032.desc:0 "Fearful balls of fire have broken out near the foundations! Some workers have died, others have quit, and progress has ground to a halt. What should be done?"
+ western_roman.0032.a:0 "Continue onwards and find more workers!"
+ western_roman.0032.b:0 "Continue at a slower pace."
+ western_roman.0032.c:0 "This has become too expensive; cancel the project."
+ end_temple:0 "Warning -- you will not be able to attempt the reconstruction again!"
+ thrid_temple_fire_failure:0 "#N You fail to find the source of the fires#!"
+ thrid_temple_fire_success:0 "#P You find the source of the fires#!"
+
+ western_roman.0033.t:0 "Sabotage!"
+ western_roman.0033.desc:0 "The cause of the fires has been found -- it was sabotage! A strange mix of Christians determined to uphold the prophecy and Jews who believed that gentiles should have had no part in the reconstruction of the Temple had conspired to repeatedly damage our project. With the saboteurs now punished, however, construction can continue apace."
+ western_roman.0033.a:0 "I shall tolerate no more delays."
+
+ western_roman.0034.t:0 "Fire!"
+ western_roman.0034.desc:0 "More fires have broken out! Surely this can't be natural? Rumors say that this is the will of God, however my spies inform me that this may be the work of renegades seeking to sabotage my reconstruction efforts..."
+ western_roman.0034.a:0 "Invest in some fire insurance?"
+ western_roman.0034.b:0 "Continue at a slower pace."
+ western_roman.0034.c:0 "This has become too expensive; cancel the project."
+
+ western_roman.0035.t:0 "Earthquake!"
+ western_roman.0035.desc:0 "Will my troubles never cease? Reports have just reached me that twin earthquakes have caused mass amounts of damage and deaths in the area, ruining the entire project. Should I even bother restarting at this point?"
+ western_roman.0035.a:0 "I will beat Jesus' prophecy or die trying."
+ western_roman.0035.b:0 "Restart with a reduced budget."
+ western_roman.0035.c:0 "This is clearly divine intervention -- time to quit."
+
+ western_roman.0036.t:0 "The Third Temple of Jerusalem"
+ western_roman.0036.desc:0 "At long last, the Third Temple has been built on Temple Mount. Throngs of Jews, newly allowed back into Jerusalem, raucously cheer my entourage as I wind my way up to the temple for the grand opening. After withstanding sabotage and natural disasters alike, I have finally overturned Jesus' prophecy and dealt a serious blow both for the Jews and against the Christians."
+ western_roman.0036.a:0 "A great day for both the true Romans and the Jews."
+ faith_third_temple:0 "Christian faiths will suffer massive fervor penalties, while Jewish faiths will be revitalized."
+ third_temple_reward_opinion:0 "Your Christian vassals will likely convert to your faith. Jewish vassals will love you."
+ jewish_convert_third_temple:0 "Non-Jewish counties in $d_palestina_prima$ and $d_urdunn$ will become Jewish."
+ #western_roman.0034.b:0 "Their fervor inspires me"
+
+ western_roman.0037.t:0 "Death of a Project Manager"
+ western_roman.0037.desc:0 "The person I had commissioned to lead the reconstruction of the Temple of Jerusalem has died. Who should be his successor?"
+ western_roman.0037.a:0 "The local ruler is best suited for this task."
+ western_roman.0037.b:0 "My steward can handle this."
+ western_roman.0037.c:0 "I will take charge personally."
+ 
  #fix loc cyber pls
  collapse.0010.t:0 "Частичный крах"
  collapse.0010.desc:0 "Серьезные неудачи в области компетентности объясняют очевидное. Наши владения не продержатся долго. Наша столица уже не бессонный мегаполис, а безмолвный, увядающий город. В народе велись тихие разговоры об отделении, но сегодня мой посланник принес мне ужасную весть. Наши викарии отделились!\n\nЗаявив, что причина в некомпетентности, многие из наших некогда безопасных земель покинули лоно империи и теперь свободны делать все, что им заблагорассудится."
