--- a/localization/russian/modifiers/TFE_dynasty_modifiers_l_russian.yml
+++ b/localization/russian/modifiers/TFE_dynasty_modifiers_l_russian.yml
@@ -10,4 +10,6 @@
  seven_houses_assimilated_desc:0 "This dynasty assimilated the [great_houses|E] of Ērān, making them the sole lineage to hold political sway within the Ērānian Empire." #NT!
  seven_houses_abolished:0 "Abolished the Great Houses" #NT!
  seven_houses_abolished_desc:0 "This dynasty abolished the [great_houses|E] of Ērān after a series of unfortunate circumstances befell the [great_houses|E], resulting in their disappearance within the empire alongside their influence." #NT!
- restorers_of_assyria:0 "Restorers of Assyria" #NT!
+ restorers_of_assyria:0 "Restorers of Assyria"
+
+ pirates_of_illyria:0 "Pirates of Illyria"
