--- a/localization/russian/modifiers/TFE_religion_modifiers_l_russian.yml
+++ b/localization/russian/modifiers/TFE_religion_modifiers_l_russian.yml
@@ -15,3 +15,29 @@
  TFE_cult_of_mary_mother_modifier_desc:0 "$TFE_cult_of_mary_virgin_modifier_desc$" #NT!
  TFE_cult_of_mary_saint_modifier:0 "Venerated Mary, the Immaculate Saint" #NT!
  TFE_cult_of_mary_saint_modifier_desc:0 "$TFE_cult_of_mary_virgin_modifier_desc$" #NT!
+ fervor_third_temple:0 "Jesus exposed as false Prophet"
+ fervor_third_temple_jew:0 "Temple of Jerusalem Rebuilt"
+ TFE_illyrian_sacrifice_sun_modifier_1:0 "Successful Sacrifice to the Sun"
+ TFE_illyrian_sacrifice_sun_modifier_2:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_3:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_4:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_5:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_6:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_7:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_8:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_9:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_10:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_11:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_sun_modifier_12:0 "$TFE_illyrian_sacrifice_sun_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_1:0 "Successful Sacrifice to the Serpent"
+ TFE_illyrian_sacrifice_serpent_modifier_2:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_3:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_4:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_5:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_6:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_7:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_8:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_9:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_10:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_11:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
+ TFE_illyrian_sacrifice_serpent_modifier_12:0 "$TFE_illyrian_sacrifice_serpent_modifier_1$"
