--- a/localization/russian/new_regions_l_russian.yml
+++ b/localization/russian/new_regions_l_russian.yml
@@ -18,3 +18,4 @@
  custom_roman_dacia:0 "Dacia" #NT!
  west_africa_and_sahel:0 "West Africa and the Sahel" #NT!
  central_africa:0 "Central Africa" #NT!
+ TFE_qanat_region:0 "regions that utilize Qanat technology"
