--- a/localization/russian/tfe_game_rules_l_russian.yml
+++ b/localization/russian/tfe_game_rules_l_russian.yml
@@ -1,23 +1,23 @@
 ﻿l_russian:
  rule_tfe_migrations: "Migrations" #NT!
- setting_tfe_migrations_very_rare: "Very Rare" #NT!
+ setting_tfe_migrations_very_rare: "#high Very Rare#!"
  setting_tfe_migrations_very_rare_desc: "The AI will attempt to migrate every 25 years." #NT!
- setting_tfe_migrations_rare: "Rare" #NT!
+ setting_tfe_migrations_rare: "#high Rare#!"
  setting_tfe_migrations_rare_desc: "The AI will attempt to migrate every 15 years." #NT!
- setting_tfe_migrations_occasional: "Occasional" #NT!
+ setting_tfe_migrations_occasional: "#high Occasional#!"
  setting_tfe_migrations_occasional_desc: "The AI will attempt to migrate every 10 years." #NT!
  setting_tfe_migrations_frequent: "Frequent" #NT!
  setting_tfe_migrations_frequent_desc: "The AI will attempt to migrate every 5 years." #NT!
- setting_tfe_migrations_very_frequent: "Very Frequent" #NT!
+ setting_tfe_migrations_very_frequent: "#high Very Frequent#!"
  setting_tfe_migrations_very_frequent_desc: "The AI will attempt to migrate every 3 years." #NT!
- setting_tfe_migrations_apocalyptic: "Apocalyptic" #NT!
+ setting_tfe_migrations_apocalyptic: "#high Apocalyptic#!"
  setting_tfe_migrations_apocalyptic_desc: "The AI will attempt to migrate every year." #NT!
  setting_tfe_migrations_off: "Off" #NT!
  setting_tfe_migrations_off_desc: "The AI will never attempt to migrate." #NT!
  rule_tfe_historical_migrations: "Historical Migrations" #NT!
- setting_tfe_historical_migrations_default: "Default" #NT!
+ setting_tfe_historical_migrations_default: "#high Default#!"
  setting_tfe_historical_migrations_default_desc: "AI migrations are more likely to be historical." #NT!
- setting_tfe_historical_migrations_strict: "#high Strict#!" #NT!
+ setting_tfe_historical_migrations_strict: "Strict"
  setting_tfe_historical_migrations_strict_desc: "AI migrations will almost always be historical." #NT!
  setting_tfe_historical_migrations_relaxed: "#high Relaxed#!" #NT!
  setting_tfe_historical_migrations_relaxed_desc: "AI migrations do not have any weighting." #NT!
@@ -48,9 +48,21 @@
 
  rule_larp: "Ahistorical Restoration Decisions" #NT!
  setting_larp_enabled: "Enabled" #NT!
- setting_larp_enabled_desc: "Grossly ahistorical restoration decisions (\"Larp\" decisions) and ahistorical cultures will be available." #NT!
+ setting_larp_enabled_desc: "Ahistorical restoration decisions (\"Larp\" decisions) will be available."
  setting_larp_disabled: "Disabled" #NT!
- setting_larp_disabled_desc: "Grossly ahistorical restoration decisions (\"Larp\" decisions) and ahistorical cultures will not be available." #NT!
+ setting_larp_disabled_desc: "Ahistorical restoration decisions (\"Larp\" decisions)  will not be available."
+
+ rule_fictional_larp: "Fictional Restoration Decisions"
+ setting_fictional_larp_enabled: "Enabled"
+ setting_fictional_larp_enabled_desc: "Grossly ahistorical and borderline fictional restoration decisions will be available (Such as The Pirate Empire of Illyria)."
+ setting_fictional_larp_disabled: "Disabled"
+ setting_fictional_larp_disabled_desc: "Grossly ahistorical and borderline fictional restoration decisions will not be available."
+
+ rule_dead_cultures: "Dead Cultures and Faiths"
+ setting_dead_cultures_enabled: "Enabled"
+ setting_dead_cultures_enabled_desc: "Ahistorical cultures and faiths (such as Punic and Gallic) will be available at the start of the game."
+ setting_dead_cultures_disabled: "Disabled"
+ setting_dead_cultures_disabled_desc: "Ahistorical cultures and faiths (such as Punic and Gallic) will not be available at the start of the game."
 
  rule_imperial_competence_partial_collapse: "Imperial Partial Collapse" #NT!
  setting_imperial_competence_partial_collapse_enabled: "Enabled" #NT!
@@ -76,4 +88,14 @@
  setting_imperial_competence_enabled_in_430:0 "#high Enabled After 430 AD#!" #NT!
  setting_imperial_competence_enabled_in_430_desc:0 "You play with the challenge of keeping your Imperial Competence stable after the year 430 AD." #NT!
  setting_imperial_competence_disabled:0 "#high Disabled#!" #NT!
- setting_imperial_competence_disabled_desc:0 "(Recommended for New Players) You play without the challenge of keeping your Imperial Competence stable." #NT!
+ setting_imperial_competence_disabled_desc:0 "(Recommended for New Players) You play without the challenge of keeping your Imperial Competence stable."
+
+ rule_migration_strength: "Migration Strength"
+ setting_migration_strength_weaker: "#high Weaker"
+ setting_migration_strength_weaker_desc: "Migration armies are 25% smaller.#!"
+ setting_migration_strength_default: "Default"
+ setting_migration_strength_default_desc: "Migration army size is not changed."
+ setting_migration_strength_stronger: "#high Stronger#!"
+ setting_migration_strength_stronger_desc: "Migration armies are 25% larger."
+
+ game_rule_category_TFE:0 "#high The Fallen Eagle#!"
